--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieRec | AI Dashboard</title>
+    <title>MovieMagic ✨🎬</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Movie<span>Rec</span> 🔥</h1>
-            <p>AI-Powered Recommendations</p>
-        </header>
-
-        <section class="search-area">
-            <div class="search-box">
-                <input type="text" id="movieInput" placeholder="Enter a movie you love..." autocomplete="off">
-                <div id="suggestions" class="suggestions-dropdown"></div>
+    <div class="dashboard">
+        <aside class="sidebar">
+            <div class="widget fact-widget">
+                <h3>💡 Did You Know?</h3>
+                <p id="fact-text">Loading a cool fact...</p>
+                <button onclick="newFact()" class="vibey-btn">Next Fact 🎲</button>
             </div>
-            <button id="getRecsBtn">Get Recommendations</button>
-        </section>
 
-        <section class="results-area">
-            <h2 id="resultTitle"></h2>
-            <div id="movieGrid" class="movie-grid">
+            <div class="widget info-widget">
+                <h3>📜 Project Info</h3>
+                <p><strong>© Sadana</strong></p>
+                <p>Movie Recommender AI</p>
+                <a href="https://colab.research.google.com/drive/1CE0niHvP-wd-sqKBAR_M_J-6z_vszwnF#scrollTo=uDnePeEF_e6_" target="_blank" class="colab-link">
+                    🐍 View Google Colab
+                </a>
+            </div>
+            
+            <div class="widget status-widget">
+                <h3>🛰️ System Status</h3>
+                <div class="status-item">Backend: <span class="status-pill green">Online 🟢</span></div>
+                <div class="status-item">AI Brain: <span class="status-pill purple">Active 🧠</span></div>
+            </div>
+        </aside>
+
+        <main class="main-content">
+            <header>
+                <h1 class="logo">Movie<span>Magic</span> ✨🍿</h1>
+                <p class="subtitle">Find your next cinematic obsession!</p>
+            </header>
+
+            <section class="glass-card search-widget">
+                <div class="search-bar">
+                    <input type="text" id="movieInput" placeholder="Type a movie you love... 🔍">
+                    <button id="getRecsBtn" class="glow-btn">Find Movies 🚀</button>
                 </div>
-        </section>
+                
+                <div class="filter-controls">
+                    <p class="filter-label">🎯 Advanced Filters</p>
+                    <div class="filter-row">
+                        <div class="input-group">
+                            <label>🎬 Director</label>
+                            <input type="text" id="directorInput" placeholder="e.g. Nolan">
+                        </div>
+                        <div class="input-group">
+                            <label>🎭 Genre</label>
+                            <input type="text" id="genreInput" placeholder="e.g. Sci-Fi">
+                        </div>
+                        <div class="input-group">
+                            <label>⭐ Rating</label>
+                            <input type="number" id="ratingInput" placeholder="6.5" step="0.1">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div id="movieGrid" class="movie-grid"></div>
+        </main>
     </div>
     <script src="script.js"></script>
 </body>
